@@ -1,3 +1,10 @@
+2008-08-09  Callum McKenzie  <callum@spooky-possum.org>
+
+	* applet.c (gnome_volume_applet_popup_dock): Revert to the old
+	code for positioning the window. This is ugly, but it doesn't have
+	the window mysteriously appearing in an odd place before jumping
+	to the right place. (Still bug #456498.)
+
 2008-08-07  Callum McKenzie  <callum@spooky-possum.org>
 
 	* dock.c (gnome_volume_applet_dock_init): Be more explicit about
